--- a/app/client/templates/home/home.html
+++ b/app/client/templates/home/home.html
@@ -1,7 +1,7 @@
 <template name="Home">
     <div class="home">
         <div class="container-fluid">
-            <h1 style="margin-left: 180px">Curations</h1><br>
+            <h1 style="margin-left: 180px">Weekly Recommmends</h1><br>
         </div>
 
         <div class="container-fluid">
