--- a/app/client/templates/layouts/master_layout/master_layout.html
+++ b/app/client/templates/layouts/master_layout/master_layout.html
@@ -1,8 +1,8 @@
 <template name="MasterLayout">
     {{> nav }}
 
-    <body style="margin-top: 60px">
-    {{> yield}}
-    </body>
+    <div style="margin-top: 60px">
+        {{> yield}}
+    </div>
 
 </template>
