--- a/app/client/templates/nav/nav.html
+++ b/app/client/templates/nav/nav.html
@@ -23,10 +23,7 @@
                     <a id="shop-nav-lifestyle" href="/shop/lifestyle" class="link">LIFE STYLE</a>
                 </li>
                 <li>
-                    <a id="shop-nav-home" href="#" class="link">SPECIAL</a>
-                </li>
-                <li>
-                    <a class="project link" href="/specialorder/">CUSTOMER</a>
+                    <a id="shop-nav-home" href="/shop/special" class="link">SPECIAL</a>
                 </li>
             </ul>
         </div>
